[project]
name = "st-rest-web"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "streamlit>=1.39.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
